# falcon-boilerplate

./: README.md  README.rst  lint.sh  setup.cfg
falcon_boilerplate/: __init__.py  controller.py  exceptions.py  protocols.py  sqlaman.py  strfunc.py
falcon_boilerplate/router/: __init__.py  base.py  controller.py  standard.py
