[metadata]
name = falcon-boilerplate
version = attr: falcon_boilerplate.__version__
author = Thomas 'sitzz' Vang
author_email = sitzzdk@gmail.com
description = Simple boilerplate router and controller classes for a Falcon API
license = WTFPL v2
keywords =
    falcon
    api
    sqlalchemy
    mvc
url = https://github.com/sitzz/falcon-boilerplate
#long_description = file: README.md
long_description_content_type = text/md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: WTFPL
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = false
include_package_data = true
packages = falcon_boilerplate, falcon_boilerplate.router
python_requires = >=3.8
install_requires =
    falcon>=3.0.0
    falcon_sqla>=0.4.0
    pytz
    sqlalchemy>=2.0.0
